// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionListPageItem renders correctly 1`] = `
<div
  className="versionListPageItem"
>
  <div
    className="versionListPageItemInner"
  >
    <Link
      href="/v1-1-0/details"
    >
      <a
        className="topWrapper"
      >
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="platformIcon"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/icon-apple.svg"
          wrapper="div"
        />
        <div
          className="title"
        >
          My app v1.1.0 (28)
        </div>
        <div
          className="note"
        >
          Updated on January 1, 2008
        </div>
      </a>
    </Link>
    <button
      className="descriptionWrapper"
      onClick={[Function]}
    >
      <div
        className="description"
      >
        This is a short description about my 1. app. It is a good app. End of description.
      </div>
      <div
        className="showMore"
      >
        <div
          className="text"
        >
          Show more
        </div>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`VersionListPageItem shows more description 1`] = `
<div
  className="versionListPageItem"
>
  <div
    className="versionListPageItemInner"
  >
    <Link
      href="/v1-1-0/details"
    >
      <a
        className="topWrapper"
      >
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="platformIcon"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/icon-apple.svg"
          wrapper="div"
        />
        <div
          className="title"
        >
          My app v1.1.0 (28)
        </div>
        <div
          className="note"
        >
          Updated on January 1, 2008
        </div>
      </a>
    </Link>
    <button
      className="descriptionWrapper isOpen"
      onClick={[Function]}
    >
      <div
        className="description"
      >
        This is a short description about my 1. app. It is a good app. End of description.
      </div>
      <div
        className="showLess"
      >
        <div
          className="text"
        >
          Show less
        </div>
        <ReactSVG
          afterInjection={[Function]}
          beforeInjection={[Function]}
          className="arrow"
          evalScripts="never"
          fallback={null}
          loading={null}
          renumerateIRIElements={true}
          src="/static/arrow-down.svg"
          wrapper="div"
        />
      </div>
    </button>
  </div>
</div>
`;
